Information Cards Added
Added and completed the information card segment
The segment has been styled

--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
 
 <body>
     <header class="header">
-
         <div class="container-upper">
         <div>
             <img src="images/planet-icon-7368.png" alt="O">
             verHorizon
         </div>
-
         <ul class="links">
             <li>
                 <a href="#">News</a>
@@ -42,14 +40,51 @@
                in the epic tale of the cosmos.</p>
                <button>Sign up</button>
         </div>
-
         <div class="right">
             <img src="images/pexels-pixabay-87611.jpg" alt="sun">
         </div>
-
         </div>
     </header>
 
+    <div class="container">
+        <h2 class="one">Embark on a journey through the cosmos with our top 5 outer space pictures. 
+            Each image offers a glimpse into the breathtaking beauty and mysteries of the universe.</h2>
+        <div class="photos">
+            <div class="sub">
+            <img src="images/pexels-pixabay-73873.jpg" alt="Space-photography">
+            <p>Captured against the backdrop of infinite space, our first image showcases a mesmerizing 
+               nebula swirling with vibrant hues of blue, purple, and pink. Lose yourself in the 
+               swirling clouds of cosmic dust and gas.</p>
+        </div>
+            <div class="sub">
+            <img src="images/pexels-pixabay-71116.jpg" alt="Space-photography">
+            <p>Prepare for an adventure as our second image transports you to the surface of an alien planet, 
+               where towering mountains and swirling clouds paint a picture of otherworldly landscapes. 
+               Experience the wonder of exploration as you contemplate the mysteries of distant worlds.</p>
+        </div>
+            <div class="sub">
+            <img src="images/pexels-pixabay-2150.jpg" alt="Space-photography">
+            <p>Next, immerse yourself in the tranquility of a distant galaxy captured in shades of deep 
+               indigo and sparkling stars. Feel the serenity as you gaze upon the distant worlds 
+               suspended in the vastness of space</p>
+        </div>
+            <div class="sub">
+            <img src="images/pexels-miriam-espacio-2694037.jpg" alt="Space-photography">
+            <p>Travel to the edge of the universe with our fourth image, where a celestial explosion 
+               bursts forth in a spectacular display of light and energy. Witness the birth of stars 
+               and the cosmic dance of creation.</p>
+        </div>
+            <div class="sub">
+            <img src="images/pexels-alex-andrews-816608.jpg" alt="Space-photography">
+            <p>Finally, marvel at the grandeur of our fifth image, where the brilliance of a distant 
+               star illuminates the darkness of space. Let your imagination soar as you ponder the 
+               infinite possibilities that lie beyond the reaches of our galaxy.</p>
+        </div>
+        </div>
+        <h2 class="two">Finally, marvel at the grandeur of our fifth image, where the brilliance of a distant star 
+            illuminates the darkness of space. Let your imagination soar as you ponder the infinite possibilities 
+            that lie beyond the reaches of our galaxy.</h2>
+    </div>
 
     <!-- <footer class="footer">freeiconspng.com</footer> -->
 </body>
