Quote segment finished
Finished the HTML and styling on the quote segment
Had to change a class to a wierder name maybe due to some css specificity problems

--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@
             that lie beyond the reaches of our galaxy.</h2>
     </div>
 
+    <div class="quote">
+        <div class="galaxy">
+            <p class="one">Space: the final frontier. These are the voyages of the starship 
+                Enterprise. Its continuing mission: to explore strange new worlds, to seek out 
+                new life and new civilizations, to boldly go where no one has gone before.</p>
+            <p class="two">--Captain Jean-Luc Picard, Star Trek</p>
+        </div>
+    </div>
+
     <!-- <footer class="footer">freeiconspng.com</footer> -->
 </body>
 
