Finished the support segment
Finished adding the support segment and styling it

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                OverHorizon offers a captivating blend of articles, images, and interactive experiences designed to ignite your 
                passion for space exploration. Join us as we delve into the unknown, where every discovery unveils a new chapter 
                in the epic tale of the cosmos.</p>
-               <button>Sign up</button>
+               <button>Sign-up</button>
         </div>
         <div class="right">
             <img src="images/pexels-pixabay-87611.jpg" alt="sun">
@@ -88,10 +88,24 @@
 
     <div class="quote">
         <div class="galaxy">
-            <p class="one">Space: the final frontier. These are the voyages of the starship 
+            <p class="one">"Space: the final frontier. These are the voyages of the starship 
                 Enterprise. Its continuing mission: to explore strange new worlds, to seek out 
-                new life and new civilizations, to boldly go where no one has gone before.</p>
+                new life and new civilizations, to boldly go where no one has gone before."</p>
             <p class="two">--Captain Jean-Luc Picard, Star Trek</p>
+        </div>
+    </div>
+
+    <div class="sign-up">
+        <div class="support">
+            <div class="paragraphs">
+                <p class="one">Support OverHorizon</p>
+                <p class="two">Supporting OverHorizon fuels our mission to explore outer space. 
+                    Your contributions drive our efforts to inspire and educate. Together, we 
+                    delve into the cosmos, uncovering mysteries and sharing its beauty</p>
+            </div>
+            <div class="button">
+                <button>Sing-up</button>
+            </div>
         </div>
     </div>
 
