Finished the footer segment

--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
                     delve into the cosmos, uncovering mysteries and sharing its beauty</p>
             </div>
             <div class="button">
-                <button>Sing-up</button>
+                <button>Sign-up</button>
             </div>
         </div>
     </div>
 
-    <!-- <footer class="footer">freeiconspng.com</footer> -->
+    <footer class="footer">Copyright @ 2024 freeiconspng.com</footer>
 </body>
 
 </html>
